syntax = "proto3";

package com.grpc.common;
import "Author.proto";

message Book {
  BookId id = 1;
  string name =2;
  int32 pageCount = 3;
  Author author = 4;
}

message Books {
  repeated Book books = 1;
}

message BookId {
  int32 id = 1;
}

service BookServices {
  // Sends a greeting
  rpc bookById (BookId) returns (Book) {}
  rpc findAllBooks (BookId) returns (Books) {}
}